# typless-docs

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: aws_s3.py  config.py  database.py  server.py
src/typless/: typless_extract_data.py  typless_parser.py
